# nginx-auth-backend

./: .example.env  .gitignore  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml
conf/docker/: Dockerfile  nginx.conf
conf/nginx/: auth_locations.conf  auth_request.conf  auth_snippet.conf  default
conf/saml/attribute_maps/: basic.py  saml_uri.py  shibboleth_uri.py
conf/systemd/: nginx_auth_backend.service  production_gunicorn.service
src/: manage.py
src/webapp/: __init__.py  apps.py  settings.py  urls.py  views.py  wsgi.py
src/webapp/management/commands/: setup_skeletons.py
src/webapp/templates/djangosaml2/: post_binding_form.html
src/webapp/templates/registration/: login.html  password_reset_email.html  password_reset_email.txt  password_reset_subject.txt
src/webapp/test/: base.py
