[tool.poetry]
name = "nginx-auth-backend"
version = "0.1.0"
description = "Simple auth backend for use with ngx_http_auth_request_module"
authors = ["Nat Gordon <nathanael.l.gordon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = { version = "^4.3", extras = ["redis"] }
celery-prometheus-exporter = "^1.7"
dj-rest-auth = "^2.1.3"
django = "^2.2"
django-allauth = "^0.44.0"
django-axes = "^5.0"
django-celery-beat = "^1.5"
django-celery-results = "^1.1"
django-cors-headers = "^3.1"
django-environ = "^0.4.5"
django-extensions = "^2.2"
django-filter = "^2.2"
django-redis = "~=4.10.0" # does not follow semver
django-storages = {version = "^1.11.1", extras = ["boto3"]}
djangorestframework = "~=3.10.3" # does not follow semver
djangorestframework-filters = ">=1.0.0.dev0"
djangorestframework-jsonapi = "^3.1"
gunicorn = "^19.9"
psycopg2-binary = "^2.8.6"
python-dateutil = "^2.8"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
# debugging
django-debug-toolbar = "^2.0"
ipdb = "^0.13.6"
ipython = "^7.21.0"
ptpython = "^3.0.16"
# linting
django-stubs = "^1.7.0"
mypy = "^0.790"
pycodestyle = "^2.4"
pydocstyle = "^5.0.2"
pylint = "^2.7.2"
pylint-django = "^2.4.2"
rope = "^0.11.0"
# formatting
black = "^20.8b1"
isort = "^5.7.0"
pre-commit = "^2.11.1"
# testing
factory_boy = "^2.12.0"
pyhamcrest = "^1.9"
tblib = "^1.6.0"
# running
werkzeug = "^0.14.1"

[tool.isort]
# this configuration makes isort and black compatible
# https://black.readthedocs.io/en/stable/the_black_code_style.html#how-black-wraps-lines
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pylint.master]
load-plugins = "pylint_django"

[tool.pylint."messages control"]
disable = "bad-continuation,too-many-ancestors,too-few-public-methods,duplicate-code"
enable = "useless-suppression"
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
